qt/gen_qgesture.h

class QGesture;
class QMetaObject;
class QObject;
class QPointF;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGesture QGesture;
typedef struct QGestureEvent QGestureEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPointF QPointF;
typedef struct QTapAndHoldGesture QTapAndHoldGesture;
typedef struct QTapGesture QTapGesture;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
void QTapGesture_delete(QTapGesture* self);
QTapAndHoldGesture* QTapAndHoldGesture_new();
QTapAndHoldGesture* QTapAndHoldGesture_new2(QObject* parent);
QMetaObject* QTapAndHoldGesture_metaObject(const QTapAndHoldGesture* self);
void* QTapAndHoldGesture_metacast(QTapAndHoldGesture* self, const char* param1);
int QTapAndHoldGesture_metacall(QTapAndHoldGesture* self, int param1, int param2, void** param3);
struct miqt_string QTapAndHoldGesture_tr(const char* s);
struct miqt_string QTapAndHoldGesture_trUtf8(const char* s);
QPointF* QTapAndHoldGesture_position(const QTapAndHoldGesture* self);
void QTapAndHoldGesture_setPosition(QTapAndHoldGesture* self, QPointF* pos);
void QTapAndHoldGesture_setTimeout(int msecs);
int QTapAndHoldGesture_timeout();
struct miqt_string QTapAndHoldGesture_tr2(const char* s, const char* c);
struct miqt_string QTapAndHoldGesture_tr3(const char* s, const char* c, int n);
struct miqt_string QTapAndHoldGesture_trUtf82(const char* s, const char* c);
struct miqt_string QTapAndHoldGesture_trUtf83(const char* s, const char* c, int n);
bool QTapAndHoldGesture_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTapAndHoldGesture_virtualbase_metaObject(const void* self);
bool QTapAndHoldGesture_override_virtual_metacast(void* self, intptr_t slot);
void* QTapAndHoldGesture_virtualbase_metacast(void* self, const char* param1);
bool QTapAndHoldGesture_override_virtual_metacall(void* self, intptr_t slot);
int QTapAndHoldGesture_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTapAndHoldGesture_override_virtual_event(void* self, intptr_t slot);
bool QTapAndHoldGesture_virtualbase_event(void* self, QEvent* event);
bool QTapAndHoldGesture_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTapAndHoldGesture_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTapAndHoldGesture_override_virtual_timerEvent(void* self, intptr_t slot);
void QTapAndHoldGesture_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTapAndHoldGesture_override_virtual_childEvent(void* self, intptr_t slot);
void QTapAndHoldGesture_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTapAndHoldGesture_override_virtual_customEvent(void* self, intptr_t slot);
void QTapAndHoldGesture_virtualbase_customEvent(void* self, QEvent* event);
bool QTapAndHoldGesture_override_virtual_connectNotify(void* self, intptr_t slot);
void QTapAndHoldGesture_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTapAndHoldGesture_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTapAndHoldGesture_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTapAndHoldGesture_staticMetaObject();
void QTapAndHoldGesture_delete(QTapAndHoldGesture* self);
QGestureEvent* QGestureEvent_new(struct miqt_array /* of QGesture* */  gestures);
QGestureEvent* QGestureEvent_new2(QGestureEvent* param1);
struct miqt_array /* of QGesture* */  QGestureEvent_gestures(const QGestureEvent* self);
QGesture* QGestureEvent_gesture(const QGestureEvent* self, int type);
struct miqt_array /* of QGesture* */  QGestureEvent_activeGestures(const QGestureEvent* self);
struct miqt_array /* of QGesture* */  QGestureEvent_canceledGestures(const QGestureEvent* self);
void QGestureEvent_setAccepted(QGestureEvent* self, QGesture* param1, bool param2);
void QGestureEvent_accept(QGestureEvent* self, QGesture* param1);
void QGestureEvent_ignore(QGestureEvent* self, QGesture* param1);
bool QGestureEvent_isAccepted(const QGestureEvent* self, QGesture* param1);
void QGestureEvent_setAccepted2(QGestureEvent* self, int param1, bool param2);
void QGestureEvent_acceptWithQtGestureType(QGestureEvent* self, int param1);
void QGestureEvent_ignoreWithQtGestureType(QGestureEvent* self, int param1);
bool QGestureEvent_isAcceptedWithQtGestureType(const QGestureEvent* self, int param1);
void QGestureEvent_setWidget(QGestureEvent* self, QWidget* widget);
QWidget* QGestureEvent_widget(const QGestureEvent* self);
QPointF* QGestureEvent_mapToGraphicsScene(const QGestureEvent* self, QPointF* gesturePoint);
void QGestureEvent_delete(QGestureEvent* self);