qt/gen_qgesture.nim

proc fcQTapGesture_delete(self: pointer) {.importc: "QTapGesture_delete".}
proc fcQTapAndHoldGesture_new(): ptr cQTapAndHoldGesture {.importc: "QTapAndHoldGesture_new".}
proc fcQTapAndHoldGesture_new2(parent: pointer): ptr cQTapAndHoldGesture {.importc: "QTapAndHoldGesture_new2".}
proc fcQTapAndHoldGesture_metaObject(self: pointer, ): pointer {.importc: "QTapAndHoldGesture_metaObject".}
proc fcQTapAndHoldGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QTapAndHoldGesture_metacast".}
proc fcQTapAndHoldGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTapAndHoldGesture_metacall".}
proc fcQTapAndHoldGesture_tr(s: cstring): struct_miqt_string {.importc: "QTapAndHoldGesture_tr".}
proc fcQTapAndHoldGesture_trUtf8(s: cstring): struct_miqt_string {.importc: "QTapAndHoldGesture_trUtf8".}
proc fcQTapAndHoldGesture_position(self: pointer, ): pointer {.importc: "QTapAndHoldGesture_position".}
proc fcQTapAndHoldGesture_setPosition(self: pointer, pos: pointer): void {.importc: "QTapAndHoldGesture_setPosition".}
proc fcQTapAndHoldGesture_setTimeout(msecs: cint): void {.importc: "QTapAndHoldGesture_setTimeout".}
proc fcQTapAndHoldGesture_timeout(): cint {.importc: "QTapAndHoldGesture_timeout".}
proc fcQTapAndHoldGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTapAndHoldGesture_tr2".}
proc fcQTapAndHoldGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTapAndHoldGesture_tr3".}
proc fcQTapAndHoldGesture_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTapAndHoldGesture_trUtf82".}
proc fcQTapAndHoldGesture_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTapAndHoldGesture_trUtf83".}
proc fQTapAndHoldGesture_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTapAndHoldGesture_virtualbase_metaObject".}
proc fcQTapAndHoldGesture_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_metaObject".}
proc fQTapAndHoldGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTapAndHoldGesture_virtualbase_metacast".}
proc fcQTapAndHoldGesture_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_metacast".}
proc fQTapAndHoldGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTapAndHoldGesture_virtualbase_metacall".}
proc fcQTapAndHoldGesture_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_metacall".}
proc fQTapAndHoldGesture_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTapAndHoldGesture_virtualbase_event".}
proc fcQTapAndHoldGesture_override_virtual_event(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_event".}
proc fQTapAndHoldGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTapAndHoldGesture_virtualbase_eventFilter".}
proc fcQTapAndHoldGesture_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_eventFilter".}
proc fQTapAndHoldGesture_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTapAndHoldGesture_virtualbase_timerEvent".}
proc fcQTapAndHoldGesture_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_timerEvent".}
proc fQTapAndHoldGesture_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTapAndHoldGesture_virtualbase_childEvent".}
proc fcQTapAndHoldGesture_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_childEvent".}
proc fQTapAndHoldGesture_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTapAndHoldGesture_virtualbase_customEvent".}
proc fcQTapAndHoldGesture_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_customEvent".}
proc fQTapAndHoldGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTapAndHoldGesture_virtualbase_connectNotify".}
proc fcQTapAndHoldGesture_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_connectNotify".}
proc fQTapAndHoldGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTapAndHoldGesture_virtualbase_disconnectNotify".}
proc fcQTapAndHoldGesture_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTapAndHoldGesture_override_virtual_disconnectNotify".}
proc fcQTapAndHoldGesture_staticMetaObject(): pointer {.importc: "QTapAndHoldGesture_staticMetaObject".}
proc fcQTapAndHoldGesture_delete(self: pointer) {.importc: "QTapAndHoldGesture_delete".}
proc fcQGestureEvent_new(gestures: struct_miqt_array): ptr cQGestureEvent {.importc: "QGestureEvent_new".}
proc fcQGestureEvent_new2(param1: pointer): ptr cQGestureEvent {.importc: "QGestureEvent_new2".}
proc fcQGestureEvent_gestures(self: pointer, ): struct_miqt_array {.importc: "QGestureEvent_gestures".}
proc fcQGestureEvent_gesture(self: pointer, typeVal: cint): pointer {.importc: "QGestureEvent_gesture".}
proc fcQGestureEvent_activeGestures(self: pointer, ): struct_miqt_array {.importc: "QGestureEvent_activeGestures".}
proc fcQGestureEvent_canceledGestures(self: pointer, ): struct_miqt_array {.importc: "QGestureEvent_canceledGestures".}
proc fcQGestureEvent_setAccepted(self: pointer, param1: pointer, param2: bool): void {.importc: "QGestureEvent_setAccepted".}
proc fcQGestureEvent_accept(self: pointer, param1: pointer): void {.importc: "QGestureEvent_accept".}
proc fcQGestureEvent_ignore(self: pointer, param1: pointer): void {.importc: "QGestureEvent_ignore".}
proc fcQGestureEvent_isAccepted(self: pointer, param1: pointer): bool {.importc: "QGestureEvent_isAccepted".}
proc fcQGestureEvent_setAccepted2(self: pointer, param1: cint, param2: bool): void {.importc: "QGestureEvent_setAccepted2".}
proc fcQGestureEvent_acceptWithQtGestureType(self: pointer, param1: cint): void {.importc: "QGestureEvent_acceptWithQtGestureType".}
proc fcQGestureEvent_ignoreWithQtGestureType(self: pointer, param1: cint): void {.importc: "QGestureEvent_ignoreWithQtGestureType".}
proc fcQGestureEvent_isAcceptedWithQtGestureType(self: pointer, param1: cint): bool {.importc: "QGestureEvent_isAcceptedWithQtGestureType".}
proc fcQGestureEvent_setWidget(self: pointer, widget: pointer): void {.importc: "QGestureEvent_setWidget".}
proc fcQGestureEvent_widget(self: pointer, ): pointer {.importc: "QGestureEvent_widget".}
proc fcQGestureEvent_mapToGraphicsScene(self: pointer, gesturePoint: pointer): pointer {.importc: "QGestureEvent_mapToGraphicsScene".}
proc fcQGestureEvent_delete(self: pointer) {.importc: "QGestureEvent_delete".}


func init*(T: type QGesture, h: ptr cQGesture): QGesture =
  T(h: h)
proc create*(T: type QGesture, ): QGesture =

  QGesture.init(fcQGesture_new())
proc create*(T: type QGesture, parent: gen_qobject.QObject): QGesture =

  QGesture.init(fcQGesture_new2(parent.h))
proc metaObject*(self: QGesture, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGesture_metaObject(self.h))

proc metacast*(self: QGesture, param1: cstring): pointer =

  fcQGesture_metacast(self.h, param1)

proc metacall*(self: QGesture, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGesture_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGesture, s: cstring): string =

  let v_ms = fcQGesture_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QGesture, s: cstring): string =

  let v_ms = fcQGesture_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc gestureType*(self: QGesture, ): gen_qnamespace.GestureType =

  gen_qnamespace.GestureType(fcQGesture_gestureType(self.h))

proc state*(self: QGesture, ): gen_qnamespace.GestureState =

  gen_qnamespace.GestureState(fcQGesture_state(self.h))

proc hotSpot*(self: QGesture, ): gen_qpoint.QPointF =

  gen_qpoint.QPointF(h: fcQGesture_hotSpot(self.h))

proc setHotSpot*(self: QGesture, value: gen_qpoint.QPointF): void =

  fcQGesture_setHotSpot(self.h, value.h)

proc hasHotSpot*(self: QGesture, ): bool =

  fcQGesture_hasHotSpot(self.h)

proc unsetHotSpot*(self: QGesture, ): void =

  fcQGesture_unsetHotSpot(self.h)

proc setGestureCancelPolicy*(self: QGesture, policy: QGestureGestureCancelPolicy): void =

  fcQGesture_setGestureCancelPolicy(self.h, cint(policy))

proc gestureCancelPolicy*(self: QGesture, ): QGestureGestureCancelPolicy =

  QGestureGestureCancelPolicy(fcQGesture_gestureCancelPolicy(self.h))

proc tr2*(_: type QGesture, s: cstring, c: cstring): string =

  let v_ms = fcQGesture_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QGesture, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQGesture_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QGesture, s: cstring, c: cstring): string =

  let v_ms = fcQGesture_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QGesture, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQGesture_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metaObject(self: QGesture, ): gen_qobjectdefs.QMetaObject =


  gen_qobjectdefs.QMetaObject(h: fQGesture_virtualbase_metaObject(self.h))

type QGesturemetaObjectBase* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: QGesture, slot: proc(super: QGesturemetaObjectBase): gen_qobjectdefs.QMetaObject) =
  # TODO check subclass
  type Cb = proc(super: QGesturemetaObjectBase): gen_qobjectdefs.QMetaObject
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGesture_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGesture_metaObject(self: ptr cQGesture, slot: int): pointer {.exportc: "miqt_exec_callback_QGesture_metaObject ".} =
  type Cb = proc(super: QGesturemetaObjectBase): gen_qobjectdefs.QMetaObject
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(): auto =
    callVirtualBase_metaObject(QGesture(h: self), )

  let virtualReturn = nimfunc[](superCall )

  virtualReturn.h
proc callVirtualBase_metacast(self: QGesture, param1: cstring): pointer =


  fQGesture_virtualbase_metacast(self.h, param1)

type QGesturemetacastBase* = proc(param1: cstring): pointer
proc onmetacast*(self: QGesture, slot: proc(super: QGesturemetacastBase, param1: cstring): pointer) =
  # TODO check subclass
  type Cb = proc(super: QGesturemetacastBase, param1: cstring): pointer
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQGesture_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QGesture_metacast(self: ptr cQGesture, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QGesture_metacast ".} =
  type Cb = proc(super: QGesturemetacastBase, param1: cstring): pointer
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: cstring): auto =
    callVirtualBase_metacast(QGesture(h: self), param1)
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
proc callVirtualBase_metacall(self: QGesture, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQGesture_virtualbase_metacall(self.h, cint(param1), param2, param3)
